Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in
M
mutter
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 756
    • Issues 756
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 95
    • Merge Requests 95
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GNOME
  • mutter
  • Issues
  • #1658

Closed
Open
Opened Feb 23, 2021 by Martin Stransky@stransky

Firefox/Wayland: Drag and Drop fails

Affected version

Fedora 33 / Wayland / Gnome mutter-3.38.3-1.fc33.x86_64 firefox-85.0.1-2.fc34.x86_64 (it's not important)

Bug summary

Mozilla BZ: https://bugzilla.mozilla.org/show_bug.cgi?id=1622107

After performing some D&D operations, wl_data_device::start_drag() call is silently cancelled. There's no information about failed/cancelled D&D. This may be as well as Gtk3 bug when we call gtk_drag_begin() but the returned context is 'dead'.

Steps to reproduce

Open Firefox on Fedora 33 / Gnome / Wayland. Select a text on webpage and move it by mouse (do D&D) for some time. It usually takes 5-10x try until D&D is blocked and Firefox does not do any D&D again. It's because Firefox things the D&D is still running and we don't get info about D&D abortion or so.

Complete Wayland log. Look for last 'wl_data_device@22.start_drag' string - this is the failed D&D operation.

run.txt

Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: GNOME/mutter#1658