Bug 1622107 [Wayland] Reset Drag and Drop operation when compositor fails to cancel it, r=jhorak

This is a workaround for https://gitlab.gnome.org/GNOME/mutter/-/issues/1658

Wayland compositor sometimes fails to send wl_data_source::cancelled() so we don't get info that the D&D is finished
and it's still marked as active internally which preverts Firefox to do any further D&D operation.

In the patch we detect such scenario and reset internal D&D state.

Differential Revision: https://phabricator.services.mozilla.com/D106266